--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,208 @@
-h1{
-    text-align: center;
-    color: purple;
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+.body {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  background-image: url("../img/bg_1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  margin: 40px;
+  cursor: default;
+}
+
+header div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3px;
+  width: 50px;
+  color: white;
+  background-color: #b98605;
+  font-size: 50px;
+}
+
+header span {
+  color: white;
+  font-size: 50px;
+  margin-left: 30px;
+}
+
+.onu-remove {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  width: 550px;
+  /* height: 350px; */
+  border: 2px solid #b98605;
+  border-radius: 30px;
+  margin: 15px;
+  padding: 15px;
+}
+
+.container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.container h2 {
+  margin: 10px;
+  font-size: 25px;
+  cursor: default;
+}
+
+.container select {
+  margin-bottom: 15px;
+  width: 430px;
+  height: 50px;
+  padding: 0 10px 0 10px;
+
+  font-size: 18px;
+
+  background: rgba(237, 237, 237, 0.75);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  border: none;
+}
+
+.container input {
+  margin-bottom: 15px;
+  width: 400px;
+  height: 50px;
+  padding: 0 10px 0 10px;
+
+  font-size: 18px;
+  text-transform: uppercase;
+
+  background: rgba(237, 237, 237, 0.75);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  border: none;
+}
+.container .btn-delete {
+  display: flex;
+  justify-content: center;
+} 
+.container button {
+  color: aliceblue;
+  font-size: 21px;
+  width: 188px;
+  height: 45px;
+  background: #C84545;
+  border-radius: 50px;
+  border: none;
+}
+.container button:hover {
+  background: #801919;
+  transition: 1s;
+  cursor: pointer;
+}
+
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  color: white;
+  position: absolute;
+  bottom: 10px;
+}
+footer div {
+  text-align: center;
+}
+
+footer h3 {
+  font-size: 15px;
+  margin: 0;
+}
+
+footer p {
+  margin: 0;
+  font-size: 12px;
+  color: #C4C4C4;
+}
+
+@media only screen and (max-width: 450px) {
+  .container {
+    width: 300px;
+  }
+  
+  .container h2 {
+    font-size: 18px;
+  }
+  
+  .container select {
+    margin-bottom: 15px;
+    width: 270px;
+    height: 25px;
+    padding: 0 10px 0 10px;
+  
+    font-size: 13px;
+  
+    background: rgba(237, 237, 237, 0.75);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    border: none;
+  }
+  
+  .container input {
+    margin-bottom: 15px;
+    width: 270px;
+    height: 25px;
+    padding: 0 10px 0 10px;
+  
+    font-size: 13px;
+    text-transform: uppercase;
+  
+    background: rgba(237, 237, 237, 0.75);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    border: none;
+  }
+  .container .btn-delete {
+    display: flex;
+    justify-content: center;
+  } 
+  .container button {
+    color: aliceblue;
+    font-size: 21px;
+    width: 188px;
+    height: 45px;
+    background: #C84545;
+    border-radius: 50px;
+    border: none;
+  }
+  .container button:hover {
+    background: #801919;
+    transition: 1s;
+    cursor: pointer;
+  }
+.modal{
+  background: white;
+  width: 200px;
+  height: 200px;
+}
 }
