--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    {{ modals() }}
 </head>
 <body>
 <h1>Exemplo de CSS</h1>
+<div class="modal-body">
+{{ modal_messages() }}
 <form action="http://127.0.0.1:5000/add" method="post">
     <input type="text" name="nome" id="nome" placeholder="Digite seu nome...">
     <br>
