--- a/templates/onu-remove.html
+++ b/templates/onu-remove.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-  <title>ONU Remove</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <title>ONU Remove</title>
 </head>
 <body>
   <div class="body">
@@ -18,13 +18,10 @@
       <div>T</div>
       <span>Management Functions</span>
     </header>
-    
     <section class="onu-remove">
-      
       <div class="container">
         <h2>REMOVER ONU</h2>
-        <!--<form action="http://192.168.50.230:5000/remove/" method="post">/-->
-        <form action="http://192.168.50.230:5000/remove/" method="post">
+        <form action="http://127.0.0.1:5000/removeonu" method="get">
           <label for="olts">LOCALIDADE:</label>
           <Select name="olts" class="olts">
             {% for n in my_list %}
@@ -34,7 +31,7 @@
           <label for="" title="Didite o Serial do equipamento">Serial:</label>
           <input title="Didite o Serial do equipamento" type="text" name="serial" id="serial" placeholder="Ex: ITBS32548741" required />
           <div class="btn-delete">
-            <button type="submit">Delete</button>
+              <button type="submit">Delete</button>
           </div>
         </form>
       </div>
