--- a/templates/loading.html
+++ b/templates/loading.html
@@ -76,5 +76,5 @@
     </div>
   </div>
 </body>
-<script> window.location.replace('/processing?data={{my_data}}'); </script>
+<script> window.location.replace('/processing?data={{my_data[1]}};{{my_data[0]}}'); </script>
 </html>
