--- a/templates/loading.html
+++ b/templates/loading.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="pt-br">
 <header><title>Loading</title></header>
 <head>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/css/loading.css') }}"/>
@@ -70,8 +70,8 @@
             </svg>
         </div>
         </div>
-        <div style="color:white; margin-left:auto; margin-right:auto; font-size: 1.3em;">
-        Aguarde...Removendo ONU {{my_data[1]}} da localidade {{my_data[0]}}
+        <div style="color:white; margin-left:auto; margin-right:auto; font-size: 20px;">
+        Aguarde... Removendo ONU - {{my_data[1]}}
         </div>
     </div>
   </div>
