--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -14,7 +14,17 @@ html {
 }
 
 body {
-    background-color: #1FB6DB;
+      position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  background-image: url("../img/bg_1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
 }
 
 .msg {
@@ -26,24 +36,25 @@ body {
 }
 
 .center {
-  position: fixed;
-  top: 40%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -100px;
+    position: absolute;;
+    /*position: fixed;*/
+    top: 40%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -200px;
 }
 
 /* loading icon color */
 #bonfire-pageloader svg {
-    fill:#fff;
+    fill:#b98605;
 }
 
 #bonfire-pageloader svg {
     -webkit-animation:spin 2s linear infinite;
     -moz-animation:spin 2s linear infinite;
     animation:spin 2s linear infinite;
-    width:100px;
-    height:100px;
+    width:300px;
+    height:300px;
 }
 
 .bonfire-pageloader-fade {
