--- a/templates/onu-remove.html
+++ b/templates/onu-remove.html
@@ -33,6 +33,11 @@
           <div class="btn-delete">
               <button type="submit">Remover</button>
           </div>
+        <div class="btn-delete">
+                {% for message in get_flashed_messages() %}
+                    <div class="alert-error" style="margin-top: 20px">Erro: {{ message }}</div>
+                {% endfor %}
+            </div>
         </form>
       </div>
     </section>
